--- a/index.html
+++ b/index.html
@@ -259,25 +259,25 @@
                         <div class="radio_text d-flex flex-row">
                                 <input type="radio" checked="checked" name="radio">
                                 <span class="checkmark"></span>
-                                <label>滿意</label>
+                                <label class="radio_text_padding">滿意</label>
                         </div>
                          
                         <div class="radio_text d-flex flex-row">
                                 <input type="radio" checked="checked" name="radio">
                                 
-                                <label>還算滿意</label>
+                                <label class="radio_text_padding">還算滿意</label>
                         </div>
 
                         <div class="radio_text d-flex flex-row">
                                 <input type="radio" checked="checked" name="radio">
                                 <span class="checkmark"></span>
-                                <label>有點不滿意</label>
+                                <label class="radio_text_padding">有點不滿意</label>
                         </div>
 
                         <div class="radio_text d-flex flex-row">
                                 <input type="radio" checked="checked" name="radio">
                                 <span class="checkmark"></span>
-                                <label>不滿意</label>
+                                <label class="radio_text_padding">不滿意</label>
                         </div>
                 </div>
 
