--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 
                     <div class="col-12 col-md card_padding">
                         <div class="card border-0">
-                            <img class="card-img-top" src="/pic/feature_3.png" alt="Card image cap">
+                            <img class="card-img-top" src="/pic/feature_3.PNG" alt="Card image cap">
                             <div class="card-body">
                                 <h5 class="card-title font_style">特色食材</h5>
                                 <p class="card-text">新鮮牛舌及產地直送鴕鳥肉搭配老闆特製醃醬，讓你吃到停不下來</p>
