--- a/index.html
+++ b/index.html
@@ -91,13 +91,13 @@
 
 
     <div class="container-fluid content_bg">
-        <div class="container feature_content_height position-relative">
+        <div class="container content_height position-relative">
             <div id="feature_title" class="feature_title">
                 <h1>炭火燒肉特色</h1>
             </div>
             <div class="mobile_box">
                 <div class="row">
-                    <div class="col-12 col-md feature_card_padding">
+                    <div class="col-12 col-md card_padding">
                         <div class="card border-0">
                             <img class="card-img-top" src="/pic/feature_1.png" alt="Card image cap">
                             <div class="card-body">
@@ -109,7 +109,7 @@
                         </div>
                     </div>
 
-                    <div class="col-12 col-md feature_card_padding">
+                    <div class="col-12 col-md card_padding">
                         <div class="card border-0">
                             <img class="card-img-top" src="/pic/feature_2-03.png" alt="Card image cap">
                             <div class="card-body">
@@ -121,7 +121,7 @@
 
                     </div>
 
-                    <div class="col-12 col-md feature_card_padding">
+                    <div class="col-12 col-md card_padding">
                         <div class="card border-0">
                             <img class="card-img-top" src="/pic/feature_3.PNG" alt="Card image cap">
                             <div class="card-body">
