--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
 
                 <div class="nav_item active">
                     <a href="#feature_title">炭 火 特 色</a>
-                    <a href="#">關 於 炭 火</a>
+                    <!-- <a href="#">關 於 炭 火</a> -->
                     <a href="#price_title">炭 火 價 格</a>
-                    <a href="#">炭 火 位 置</a>
-                    <a href="#">聯 絡 炭 火</a>
+                    <a href="#locate_title">炭 火 位 置</a>
+                    <a href="#QA">聯 絡 炭 火</a>
                 </div>
 
             </nav>
@@ -62,16 +62,16 @@
         <div id="nav_close" class="nav_close">
             <ul class="list_style">
                 <li><a href="#feature_title">炭火特色</a></li>
-                <li><a href="#">關於炭火</a></li>
+                <!-- <li><a href="#">關於炭火</a></li> -->
                 <li><a href="#price_title">炭火價格</a></li>
-                <li><a href="#">炭火位置</a></li>
-                <li><a href="#">聯絡炭火</a></li>
+                <li><a href="#locate_title">炭火位置</a></li>
+                <li><a href="#QA">聯絡炭火</a></li>
 
             </ul>
         </div>
     </div>
 
-    <div class="swiper-container">
+    <div class="swiper-container swiper_padding">
         <div class="swiper-wrapper">
             <div class="swiper-slide banner_bg1">
                 <img src="/pic/banner2.png" alt="">
@@ -190,7 +190,7 @@
 
 
     <div class="container locate_padding">
-        <div class="locate_title">
+        <div id="locate_title" class="locate_title">
             <h1>炭火燒肉位置</h1>
         </div>
         <div class="row">
@@ -245,11 +245,11 @@
 
 
 
-    <div class="container">
+    <div class="container QA_padding">
         <div class="row">
             <div class="col-12 col-md-6 QA_list">
 
-                <p>你想要對我們說些什麼?</p>
+                <p id="QA">您想要對我們說些什麼?</p>
 
                 <div class="QA_box">
                     <select name="my_html_select_box">
@@ -258,7 +258,7 @@
                         <option>服務態度</option>
                     </select>
                 </div class="QA_p_flex">
-                <p>你對我們<span id="demo">菜色</span>的滿意程度等級：</p>
+                <p>您對我們<span id="demo">菜色</span>的滿意程度等級：</p>
 
                 <div class="radio_btn">
                     <div class="radio_text d-flex flex-row">
@@ -293,6 +293,36 @@
     </div>
 
 
+
+    <div class="container-fluid col_footer_paddig">
+        <div class="container">
+            <div class="row">
+                <div class="col-12 col-md-6">
+                    <div class="footer_col_imgflex">
+                        <img src="/pic/logo-03.png" alt="炭火燒肉工房">
+                    </div>
+                </div>
+
+                <div class="col-12 col-md-6">
+                    <div class="row">
+                        <div class="fb_style">
+                            <a href="https://www.facebook.com/pages/%E7%82%AD%E7%81%AB%E7%87%92%E8%82%89%E5%B7%A5%E6%88%BF/158207317700216">
+                                <img src="/pic/facebook.svg" alt="炭火燒肉工房臉書"></a>
+                        </div>
+                        <div class="footer_title">
+                            <h4>炭火燒肉工房</h4>
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <div class="col footer_copyright">
+                                <p>Copyright © 2018 炭火燒肉工房. All rights reserved</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
 
 
