edit feature link

--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@
 
     <div class="container-fluid content_bg">
         <div class="container content_height position-relative">
-            <div id="feature_title" class="feature_title">
-                <h1>炭火燒肉特色</h1>
+            <div class="feature_title">
+                <h1  id="feature_title">炭火燒肉特色</h1>
             </div>
             <div class="mobile_box">
                 <div class="row">
