test ipad logo 靠上對齊

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
     <nav class="mobile_nav">
         <div class="row">
-            <div class="col-6 mobile_nav_logo">
+            <div class="col-6 mobile_nav_logo align-self-baseline">
                 <img src="/pic/logo_s.png" alt="炭火燒肉工房">
             </div>
 
