--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="container">
             <nav class="navbar">
 
-                <div class="nav_logo">
+                <div class="nav_logo align-self-baseline">
                     <img src="/pic/logo-03.png" alt="炭火燒肉工房">
                 </div>
 
@@ -45,7 +45,7 @@
 
     <nav class="mobile_nav">
         <div class="row">
-            <div class="col-6 mobile_nav_logo align-self-baseline">
+            <div class="col-6 mobile_nav_logo">
                 <img src="/pic/logo_s.png" alt="炭火燒肉工房">
             </div>
 
